--- a/app/material/templates/material-add.html
+++ b/app/material/templates/material-add.html
@@ -1,14 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <title>Document</title>
-  </head>
-  <body>
-    <form action="{{url_for('material.add_material')}}" method="POST">
-    <div>{{form.matnr.label}}: {{form.matnr()}}</div>
-    <div>{{form.matdb.label}}: {{form.matdb()}}</div>
-    <button type="submit">Submit</button>
-    </form> 
-  </body>
-</html>
+{% extends "base.html" %}
+{% block title %}material-add{% endblock %}
+{% block page_content %}
+  <form action="{{url_for('material.add_material')}}" method="POST" role="form" class="form">
+    <div class="form-group">
+      {{form.matnr.label}}: {{form.matnr(class="form-control")}}
+    </div>
+    <div class="form-group">
+      {{form.matdb.label}}: {{form.matdb(class="form-control")}}
+    </div>
+    <button type="submit" class="btn btn-default">添加</button>
+  </form>
+{% endblock %}
