show add button in list

--- a/app/material/templates/materials.html
+++ b/app/material/templates/materials.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
+  <a href="{{url_for('material.add_material')}}" class="btn btn-primary">Add</a>
   <table class="table table-bordered">
     <tr>
       <th>Id</th>
