python return list to handsontable - html {{data|safe}}

--- a/app/material/templates/table.html
+++ b/app/material/templates/table.html
@@ -1,35 +1,37 @@
-{% extends "base.html" %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Document</title>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/handsontable/0.16.1/handsontable.full.min.css">
 
-{% block styles%}
-  {{super()}}
-  <link rel="stylesheet" media="screen" href="http://handsontable.com/dist/handsontable.full.css">
-{% endblock %}
+  </head>
+  <body>
+    <div id="example"></div>
 
-{% block page_content %}
-  <a href="{{url_for('material.add_material')}}" class="btn btn-primary">Add</a>
-
-  <div id="example"></div>
-{% endblock %}
-
-{% block scripts %}
-  {{super()}}
-  <script src="http://handsontable.com/dist/handsontable.full.js"></script>
-
-  <script>
-   var data1 = [
-     ["", "Ford", "Volvo", "Toyota", "Honda"],
-     ["2014", 10, 11, 12, 13],
-     ["2015", 20, 11, 14, 13],
-     ["2016", 30, 15, 12, 13]
-   ];
-   //var dd = $.getJSON({{data}});
-   var container = document.getElementById('example'),hot;
-   var hot = new Handsontable(container, {
-     data:data1,
-     minSpareRows: 1,
-     rowHeaders: true,
-     colHeaders: true,
-     contextMenu: true
-   });
-  </script>
-{% endblock %}
+    <script src="http://cdn.bootcss.com/handsontable/0.16.1/handsontable.full.min.js"></script>
+    <script>
+     var data1 = [
+       ["", "Ford", "Volvo", "Toyota", "Honda"],
+       ["2014", 10, 11, 12, 13],
+       ["2015", 20, 11, 14, 13],
+       ["2016", 30, 15, 12, 13]
+     ];
+     var d2=[
+       {'id': 1, 'matnr': '123', 'matdb': 'moashi'},
+       {'id': 2, 'matnr': 'hello', 'matdb': 'world'},
+       {'id': 3, 'matnr': '', 'matdb': ''},
+       {'id': 5, 'matnr': 'goodbye', 'matdb': 'boy'}
+     ];
+     
+     var container = document.getElementById('example');
+     var hot = new Handsontable(container, {
+       data:{{data|safe}},//就是这个safe解决了问题！否则是这样：[&#39;id&#39;, &#39;matnr&#39;, &#39;matdb&#39;]
+       minSpareRows: 1,
+       rowHeaders: true,
+       colHeaders: true,
+       contextMenu: true
+     });
+    </script>
+  </body>
+</html>
